@@ -161,26 +161,25 @@ lv=2
 dt=Text
 nm=Customizing the generic plugin
 ctime=3612528153
-mtime=3612528581
+mtime=3638786049
 <article>
 #_<markdown>
 #_
 #_The easiest way to build a LuaFAR plugin DLL is via `luaplug.mak`
 #_makefile (MinGW is required). This makefile can be used either directly or included in another makefile. It accepts the following parameters:
 #_
-#_- **`TARGET`** - name of the resulting DLL, e.g.:<br>
-#_  "`TARGET = helloworld.dll`".<br>
-#_  Defaults to `luaplug.dll`.
+#_- **`TARGET`** - name of the resulting DLL, e.g.: "`TARGET = helloworld.dll`".
 #_
 #_- **`FAR_EXPORTS`** - list of functions that should be exported by the plugin (in uppercase, whitespace-separated, final letter `W` removed), e.g.:<br>
 #_  "`FAR_EXPORTS = OPEN EXITFAR`".<br>
 #_The following functions are always exported, so there's no need to include them in the list:
 #_`GetGlobalInfoW`, `SetStartupInfoW`, `GetPluginInfoW` and `ProcessSynchroEventW`.
 #_
-#_- **`PATH_LUAFAR`** - root directory of the LuaFAR distribution.
+#_- **`FARDIR`** - the root directory of Far Manager source tree, e.g. "`FARDIR = C:\farmanager`".
 #_
-#_- **`ENV_PREFIX`** - prefix for LuaFAR-specific environment variables.
-#_Defaults to `L"LUAFAR"` for 32-bit plugins, and to `L"LUAFAR64"` for 64-bit plugins. (See [`LF_InitLuaState1`](385.html) for details).
+#_- **`ENV_PREFIX`** - prefix for LuaFAR-specific environment variables.<br>
+#_  If specified, e.g. "`ENV_PREFIX = LUAFAR`" then [`LF_ProcessEnvVars`](441.html) is called
+#_  before the first run of the plugin's main script.
 #_
 #_@@@
 #_{getglobalinfow}: http://api.farmanager.com/ru/exported_functions/getglobalinfow.html
