@@ -1,40 +1,41 @@
 # luaplug.mak
 
 ifndef FARDIR
-  FARDIR = ..\..\..\unicode_far
+  FARDIR = ..\..\..\..
 endif
+
+INC_FAR = $(FARDIR)\plugins\common\unicode
+PATH_LUAFAR = $(FARDIR)\plugins\luamacro\luafar
+INC_LUA = $(PATH_LUAFAR)\..\luasdk\include
+LUAFARDLLNAME = luafar3
+LUADLLNAME = lua51
+
 ifndef PATH_LIBS
-  PATH_LIBS = $(FARDIR)\Release.$(DIRBIT).vc
+  PATH_LIBS = $(FARDIR)\unicode_far\Release.$(DIRBIT).vc
 endif
+
 ifndef TARGET
   TARGET = luaplug.dll
 endif
+
 ifdef FAR_EXPORTS
   EXPORTS = $(addprefix -DEXPORT_,$(FAR_EXPORTS))
 endif
+
 ifndef DIRBIT
   DIRBIT = 32
 endif
 
-PATH_LUAFAR = $(FARDIR)\..\plugins\luamacro\luafar
-
-ifeq ($(LUAVERSION),52)
-  INC_LUA =
-  LUADLLNAME = lua52
-else
-  INC_LUA = $(PATH_LUAFAR)\..\luasdk\include
-  LUADLLNAME = lua51
+ifdef ENV_PREFIX
+  ENV_FLAG = -DENV_PREFIX=L\"$(ENV_PREFIX)\"
 endif
-
-INC_FAR = $(FARDIR)\..\plugins\common\unicode
-LUAFARDLLNAME = luafar3
 
 ARCH= -m$(DIRBIT)
 CC= gcc
 
 OBJ = luaplug.o $(MYOBJ)
 
-CFLAGS = -O2 -Wall -I$(INC_FAR) -I$(INC_LUA) $(EXPORTS) $(ARCH) $(MYCFLAGS)
+CFLAGS = -O2 -Wall -I$(INC_FAR) -I$(INC_LUA) $(EXPORTS) $(ARCH) $(ENV_FLAG) $(MYCFLAGS)
 
 LDFLAGS = -Wl,--kill-at -shared -s $(ARCH) $(MYLDFLAGS) -L$(PATH_LIBS)
 
