@@ -1,4 +1,11 @@
-﻿shmuel 17.04.2015 00:31:25 +0200 - build 508
+﻿shmuel 21.04.2015 16:19:03 +0200 - build 509
+
+1. LuaFAR (generic plugin):
+   Параметр ENV_PREFIX больше не имеет значения по умолчанию: ни в C-файле, ни в мейк-файле.
+   Теперь для того, чтобы LuaFAR-плагин при инициализации обрабатывал переменные окружения,
+   параметр ENV_PREFIX должен быть задан явно при сборке плагина.
+
+shmuel 17.04.2015 00:31:25 +0200 - build 508
 
 1. M#2986: far /e падает при попытке вызвать юзер меню макросом.
 
